urpc/internal/core/analysis/testdata/errors/duplicates/duplicate_type.ufo
// @expect: E801

type User {
	id: string
}

type User {
	name: string
}
